# dump_web_app_tg

./: main.py  pyproject.toml
core/: settings.py
templateFiles/: index.html
templateFiles/static/: script.js  styles.css
