[tool.poetry]
name = "dump-app"
version = "0.1.0"
description = ""
authors = ["Leonid Sliusar <loslyusar@gmail.com>"]
readme = "README.md"
packages = [{include = "dump_app"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
aiogram = "^2.25.1"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
